add: Добавлены 2 сервера: - HttpServer, разработанный с помощью com.sun.net.httpserver и отвечающий за get post delete запросы к task - KVServer, отвечающий за авторизацию с помощью токена. - Написаны адаптеры для enum next: Написать KVClient + JTest